--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,13 +1,37 @@
+:root {
+  --bg: #000;
+  --bg-accent: #333;
+  --text-color: #eee;
+  --accent: tomato;
+  --accent-opposite: #fff;
+
+  --height-nav: 60px;
+}
+
 .App {
   width: 100%;
   height: 100vh;
-  background-color: #000;
-  color: #fff;
+  background-image: url(../../public/logo512.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  background-color: var(--bg);
+  color: var(--text-color);
+  transition: 0.3s;
+  box-sizing: border-box;
+  word-break: break-all;
+}
+.App {
+  --bg: #eee;
+  --bg-accent: #ccc;
+  --text-color: #333;
+}
+.App.dark {
+  --bg: #000;
+  --bg-accent: #333;
+  --text-color: #ddd;
 }
 
-.SmallContainer {
-  max-width: 1000px;
-  padding: 1rem;
-  margin: auto;
-  border: 1px solid yellow;
+button {
+  cursor: pointer;
 }
