--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -32,6 +32,7 @@
   background-color: transparent;
   border: none;
   transition: 0.3s;
+  padding: 0.5em;
   &:hover {
     transform: scale(1.1);
   }
