--- a/src/components/Profile.module.scss
+++ b/src/components/Profile.module.scss
@@ -50,3 +50,14 @@
 .Open {
   right: 0;
 }
+
+.ButtonTheme {
+  font-size: 27px;
+  background-color: transparent;
+  border: none;
+  transition: 0.3s;
+  padding: 0.5em;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
