--- a/src/components/styles/Paper.module.scss
+++ b/src/components/styles/Paper.module.scss
@@ -1,4 +1,14 @@
+.Flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.Center {
+  text-align: center;
+}
 .Wrapper {
+  min-width: 200px;
+  max-width: 500px;
   margin: 1rem;
   position: relative;
   color: var(--text-color);
