--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -3,6 +3,7 @@
   --bg-accent: #333;
   --text-color: #eee;
   --accent: #ff4400cc;
+  --accent2: #f50057cc;
   --accent-opposite: #fff;
 
   --height-nav: 60px;
@@ -53,4 +54,8 @@ button {
 
 a {
   text-decoration: none;
+  color: var(--accent);
+}
+a:visited {
+  color: var(--accent2);
 }
