--- a/src/components/styles/Paper.module.scss
+++ b/src/components/styles/Paper.module.scss
@@ -36,7 +36,12 @@
     margin-bottom: 1em;
   }
 }
-
+.ColorAccent {
+  color: var(--accent);
+}
 .ColorAccent2 {
   color: var(--accent2);
+}
+.Blur {
+  opacity: 0.7;
 }
