구역마다 사건목록

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,7 @@
 :root {
   --bg: #000;
   --bg-accent: #333;
+  --bg-accent2: #555;
   --text-color: #eee;
   --accent: #ff4400cc;
   --accent2: #5393ff;
@@ -29,6 +30,7 @@
 .App {
   --bg: #eee;
   --bg-accent: #ccc;
+  --bg-accent2: #aaa;
   --text-color: #333;
   --accent2: #2979ff;
   --accent3: #00a152;
