--- a/src/components/Dashboard/Clean.module.scss
+++ b/src/components/Dashboard/Clean.module.scss
@@ -4,7 +4,6 @@
   // top: 0;
   text-align: center;
 }
-
 .Space {
   padding: 0.5em;
 }
@@ -21,4 +20,9 @@
 }
 .Blur {
   opacity: 0.7;
+}
+.Title {
+  text-decoration: underline;
+  margin-bottom: 0.2em;
+  font-size: 1.2rem;
 }
