--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -3,6 +3,7 @@
   --bg-accent: #333;
   --bg-accent2: #555;
   --text-color: #eee;
+  --text-color2: #ccc;
   --accent: #ff4400cc;
   --accent2: #5393ff;
   --accent3: #00e676;
@@ -32,6 +33,7 @@
   --bg-accent: #ccc;
   --bg-accent2: #aaa;
   --text-color: #333;
+  --text-color2: #555;
   --accent2: #2979ff;
   --accent3: #00a152;
 }
@@ -39,6 +41,7 @@
   --bg: #121212;
   --bg-accent: #555;
   --text-color: #eee;
+  --text-color2: #ccc;
   --accent2: #5393ff;
   --accent3: #00e676;
 }
