--- a/src/components/Detail/Place.module.scss
+++ b/src/components/Detail/Place.module.scss
@@ -43,3 +43,17 @@
 }
 .List {
 }
+
+.Label {
+  color: var(--text-color2);
+}
+.Penalty {
+  white-space: pre-line;
+  word-break: keep-all;
+  padding: 1em;
+  border-radius: 0.5em;
+  margin: 0.4em;
+  background-color: var(--bg-accent);
+  color: var(--text-color);
+  border: 2px dotted var(--text-color2);
+}
