--- a/src/components/Detail/Clean.module.scss
+++ b/src/components/Detail/Clean.module.scss
@@ -21,3 +21,10 @@
   border-radius: 3px;
   opacity: 0.8;
 }
+
+.Penalty {
+  margin: 0.5em 0;
+  display: inline-block;
+  font-weight: 500;
+  // background-color: var(--accent-opposite);
+}
