--- a/src/components/Form/CleanForm.module.scss
+++ b/src/components/Form/CleanForm.module.scss
@@ -29,10 +29,6 @@
   color: var(--text-color2);
 }
 .Penalty {
-  font-size: 1.5em;
-  color: var(--text-color);
-}
-.PenaltyContent {
   white-space: pre-line;
   word-break: keep-all;
   padding: 1em;
@@ -41,6 +37,16 @@
   background-color: var(--bg-accent);
   color: var(--text-color);
   border: 2px dotted var(--text-color2);
+  > * + * {
+    margin-top: 1em;
+  }
+  > div:first-child {
+    color: var(--text-color2);
+  }
+}
+.Judgement {
+  font-size: 1.5em;
+  color: var(--accent);
 }
 
 .Label {
