--- a/src/components/Detail/Clean.module.scss
+++ b/src/components/Detail/Clean.module.scss
@@ -23,7 +23,7 @@
 }
 
 .Penalty {
-  margin: 0.5em 0;
+  margin-top: 0.5em;
   display: inline-block;
   font-weight: 500;
   // background-color: var(--accent-opposite);
