스타일 변경

--- a/src/components/Detail/Place.module.scss
+++ b/src/components/Detail/Place.module.scss
@@ -27,6 +27,7 @@
   white-space: pre-line;
   word-break: keep-all;
   padding: 1em;
+  text-align: left;
 }
 
 .Title {
@@ -49,6 +50,7 @@
   color: var(--text-color2);
 }
 .Penalty {
+  text-align: left;
   white-space: pre-line;
   word-break: keep-all;
   padding: 1em;
