--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -15,14 +15,20 @@
   box-sizing: border-box;
 }
 
-.App {
+.Back {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  position: fixed;
   background-image: url(../../public/logo512.png);
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
   background-color: var(--bg);
+}
+.App {
+  position: relative;
+  background-color: transparent;
+  // background-attachment: fixed; // 모바일에서 안됨
   color: var(--text-color);
   transition: 0.3s;
   word-break: break-all;
