--- a/src/components/Detail/Clean.module.scss
+++ b/src/components/Detail/Clean.module.scss
@@ -1,8 +1,21 @@
+.Wrapper {
+  display: block;
+  width: 100%;
+}
 .MarginTop {
-  margin-top: 1em;
+  margin-top: 0.5em;
+}
+.Flex {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .ColorAccent {
   color: var(--accent);
+}
+.ColorAccent2 {
+  color: var(--accent2);
 }
 .ColorAccent3 {
   color: var(--accent3);
@@ -11,15 +24,10 @@
   opacity: 0.7;
 }
 .Memo {
-  display: inline-block;
+  margin-top: 0.5em;
   font-size: 0.9em;
   background-color: var(--bg-accent);
-  // border: 1px solid var(--bg-accent2);
-  border-radius: 5px;
-  padding: 0.5em;
-  margin-top: 0.5em;
-  border-radius: 3px;
-  opacity: 0.8;
+  padding: 0.1em;
 }
 
 .Penalty {
@@ -27,4 +35,8 @@
   display: inline-block;
   font-weight: 500;
   // background-color: var(--accent-opposite);
+}
+
+.LineThrough {
+  text-decoration: line-through;
 }
