--- a/src/components/Form/CleanForm.module.scss
+++ b/src/components/Form/CleanForm.module.scss
@@ -52,6 +52,10 @@
   font-size: 1.5em;
   color: var(--accent);
 }
+.Judgement2 {
+  font-size: 1.5em;
+  color: var(--accent2);
+}
 
 .Label {
   color: var(--text-color2);
