--- a/src/components/Detail/Clean.module.scss
+++ b/src/components/Detail/Clean.module.scss
@@ -51,3 +51,8 @@
 .LineThrough {
   text-decoration: line-through;
 }
+.TimeLeft {
+  margin-top: 0.5em;
+  text-align: right;
+  color: var(--accent);
+}
