--- a/src/components/styles/Paper.module.scss
+++ b/src/components/styles/Paper.module.scss
@@ -4,6 +4,12 @@
   justify-content: center;
   align-items: flex-start;
 }
+.FlexCenter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 .Wrapper {
   min-width: 270px;
   max-width: 360px;
@@ -49,4 +55,14 @@
 .Image {
   width: 100%;
   max-width: 500px;
+}
+.ButtonFile {
+  cursor: pointer;
+  transition: 0.3s;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+.DisplayNone {
+  display: none;
 }
