--- a/src/components/styles/List.module.scss
+++ b/src/components/styles/List.module.scss
@@ -22,3 +22,12 @@
 .Accent {
   color: var(--accent);
 }
+
+.Title {
+  text-decoration: underline;
+  margin-bottom: 0.2em;
+  font-size: 1.2rem;
+}
+.Space {
+  padding: 0.5em;
+}
