--- a/src/components/Dashboard/Clean.module.scss
+++ b/src/components/Dashboard/Clean.module.scss
@@ -5,7 +5,7 @@
   text-align: center;
 }
 .Space {
-  padding: 0.5em;
+  // padding: 0.5em;
 }
 
 .MarginTop {
@@ -20,11 +20,6 @@
 }
 .Blur {
   opacity: 0.7;
-}
-.Title {
-  text-decoration: underline;
-  margin-bottom: 0.2em;
-  font-size: 1.2rem;
 }
 .Who {
   margin: 0.5em;
