--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -92,3 +92,14 @@ a:visited {
 .accent3 {
   color: var(--accent3);
 }
+
+iframe {
+  max-width: 100%;
+}
+
+.line-space {
+  white-space: pre-line;
+}
+.blur {
+  opacity: 0.7;
+}
