--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -43,6 +43,7 @@
   --bg-accent2: #aaa;
   --text-color: #333;
   --text-color2: #555;
+  --accent: #ff4400cc;
   --accent2: #2979ff;
   --accent3: #00a152;
 }
@@ -51,10 +52,11 @@
   --bg-accent: #555;
   --text-color: #eee;
   --text-color2: #ccc;
-  --accent2: #5393ff;
+  --accent: #ff4400;
+  --accent2: #33bfff;
   --accent3: #00e676;
   .Back {
-    background-image: url(../assets/jc.png);
+    background-image: url(../assets/lu.jpg);
   }
 }
 
