--- a/src/components/styles/Paper.module.scss
+++ b/src/components/styles/Paper.module.scss
@@ -18,6 +18,7 @@
   color: var(--text-color);
   transition: 0.3s;
   text-align: center;
+  word-break: keep-all;
 }
 .WrapperWide {
   max-width: 100%;
