--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -56,7 +56,7 @@
   --accent2: #33bfff;
   --accent3: #00e676;
   .Back {
-    background-image: url(../assets/lu.jpg);
+    background-image: url(../assets/lu.png);
   }
 }
 
@@ -95,8 +95,18 @@ a:visited {
   color: var(--accent3);
 }
 
+.video_wrapper {
+  margin-top: 0.5em;
+  position: relative;
+  padding-bottom: calc(315 / 560 * 100%);
+}
 iframe {
-  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--bg-accent);
 }
 
 .line-space {
