--- a/src/components/Detail/Clean.module.scss
+++ b/src/components/Detail/Clean.module.scss
@@ -34,11 +34,11 @@
   opacity: 0.7;
 }
 .Memo {
-  margin-top: 0.5em;
-  font-size: 0.9em;
-  background-color: var(--bg-accent);
+  margin-top: 0.7em;
   color: var(--text-color);
-  padding: 0.1em;
+}
+.Dates {
+  font-size: 0.9em;
 }
 
 .Penalty {
