버그수정 자동 초대

--- a/src/components/Detail/Clean.module.scss
+++ b/src/components/Detail/Clean.module.scss
@@ -33,10 +33,13 @@
 .Blur {
   opacity: 0.7;
 }
+.Ital {
+  font-style: italic;
+}
 .Quot {
   font-style: italic;
   // color: var(--text-color2);
-  opacity: 0.5;
+  opacity: 0.6;
 }
 .Memo {
   margin-top: 0.7em;
