--- a/src/components/Form/CleanForm.module.scss
+++ b/src/components/Form/CleanForm.module.scss
@@ -61,6 +61,7 @@
   color: var(--text-color2);
   margin-bottom: 0.5em;
   font-size: 0.8em;
+  margin-top: 2em;
 }
 .Textarea {
   background: var(--bg);
