--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -35,7 +35,7 @@
   color: var(--text-color);
   transition: 0.3s;
   word-break: break-all;
-  padding-bottom: 1rem;
+  // padding-bottom: 1rem;
 }
 .App {
   --bg: #eee;
