--- a/src/components/Detail/Place.module.scss
+++ b/src/components/Detail/Place.module.scss
@@ -39,16 +39,9 @@
   background: var(--accent);
   color: var(--accent-opposite);
 }
-
-.Buttons {
-  margin: 1rem;
-}
-.List {
-}
-
 .Label {
   color: var(--text-color2);
-  font-size: 0.9em;
+  font-size: 14px;
 }
 .Penalty {
   text-align: left;
