--- a/src/components/Detail/Clean.module.scss
+++ b/src/components/Detail/Clean.module.scss
@@ -34,6 +34,7 @@
   opacity: 0.7;
 }
 .Memo {
+  display: flex;
   margin-top: 0.7em;
   color: var(--text-color);
   max-width: 80%;
@@ -60,6 +61,7 @@
 
 .Pointer {
   cursor: pointer;
+  transition: 0.2s;
   &:hover {
     opacity: 0.7;
   }
