--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -19,10 +19,10 @@
   width: 100%;
   height: 100vh;
   position: fixed;
-  background-image: url(../assets/jc.png);
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #fff;
+  background-image: url(../assets/mask2.png);
+  background-position: center;
+  background-size: contain;
   background-color: var(--bg);
 }
 .Front {
@@ -60,6 +60,9 @@
   --accent3: #00e676;
   .Back {
     background-image: url(../assets/lu.png);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
   }
 }
 
