--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -21,10 +21,9 @@
   position: fixed;
   background-color: #fff;
   background-position: center;
-  // background-image: url(../assets/mask.png);
-  // background-size: contain;
-  background-image: url(../assets/mask-square.png);
-  background-size: 256px;
+  background-image: url(../assets/mask.png);
+  background-size: contain;
+  // background-image: url(../assets/mask-square.png);
   // background-color: var(--bg);
   background-color: #f7f7f7;
 }
